# evals

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
notebooks/: generate_runs.ipynb  iceberg.ipynb  mongo_vs_parquet.ipynb  paquert_compression.ipynb  parquet_stess_test.ipynb  query.ipynb
notebooks/etc/catalog/: r2.properties
scripts/: gen-long-k8s.sh  gen-long-pod.yaml  gen-long.py  gen-reallife.py  gen-simulated.py  gen-wide.py  init-catalog.py  setup-cloudflare-iceberg.py  setup-local-duckdb.sh  submit-parallel-jobs.sh  test-local-iceberg.py  trino-queries.sql  trino-query.py
trino/etc/: r2.properties
trino/etc/catalog/: iceberg.properties
